@@ -20,6 +20,13 @@ bzr 1.4rc2 NOT RELEASED YET
     * Fix error about "attempt to add line-delta in non-delta knit".
       (Andrew Bennetts, #205156)
 
+    * Fixed performance degradation in fetching from knit repositories to
+      knits and packs due to parsing the entire revisions.kndx on every graph
+      walk iteration fixed by using the Repository.get_graph API.  There was
+      another regression in knit => knit fetching which re-read the index for
+      every revision each side had in common.
+      (Robert Collins, John Arbash Meinel)
+
 
 bzr 1.4rc1 2008-04-11
 ---------------------
